--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Book_Airplanetacket">
-        <activity android:name=".OrderConfirmationActivity"></activity>
+        <activity android:name=".PaymentActivity"></activity>
+        <activity android:name=".OrderConfirmationActivity" />
         <activity android:name=".BookingDetailsActivity" />
         <activity android:name=".TicketBookingActivity" />
         <activity android:name=".RegistrationActivity" />
