优化样式显示：使用字体筑紫b丸，主题色配置为马卡龙系列

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,10 +11,13 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Book_Airplanetacket" >
-        
+                android:theme="@style/Theme.Book_Airplanetacket" >
 
-        <activity android:name=".AddPassengerActivity" >
+    <!--            android:theme="@style/AppTheme">-->
+
+
+
+    <activity android:name=".AddPassengerActivity" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
             </intent-filter>
